# release_workflows

./: .env  .gitignore  Cargo.toml  Installation.md  README.md  example.env  main.py  pyproject.toml
.github/workflows/: api_docs.yml  build_release.yml
docs/: index.html  installation.html  license.html  redoc.html  swagger_ui.html
releaseworkflows/: build.py  main.py
src/: main.rs
src/api/: routes.rs
src/git/: manager.rs  server.rs
src/util/: discord.rs  file_system.rs  mod.rs  workflows.rs
src/web/: index_template.html
