[package]
name = "release_workflows"
version = "0.1.0"
edition = "2021"
authors = ["Ben Arteii <ben.arteii@proton.me>"]
readme = "README.md"
repository = "https://github.com/Arteiii/release_workflows"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitoxide = "0.33.0"
