[package]
name = "release_workflows"
version = "0.1.0"
edition = "2021"
authors = ["Ben Arteii <ben.arteii@proton.me>"]
readme = "README.md"
repository = "https://github.com/Arteiii/release_workflows"
license = "AGPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.backtrace]
opt-level = 3


[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
color-eyre = { version = "0.6.2", default-features = false }
poem = { version = "2.0.1", features = ["static-files"] }
poem-openapi = { version = "4.0.1", features = ["redoc", "swagger-ui"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.18.2"
regex = "1.10.3"
